added footer images to /img. added footer images to html and styled footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo"></div>
+        <nav></nav>
+    </header>
+
+    <main id="main"></main>
+
+    <footer>
+        <img src="/img/footer-img.jpg">
+        <img src="/img/footer-copyright.png">
+    </footer>
 </body>
 </html>
