drafted main.js & linked to html

--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
         <img src="/img/footer-img.jpg">
         <img src="/img/footer-copyright.png">
     </footer>
+
+    <script src="/index.js"></script>
 </body>
 </html>
