--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     <header>
         <div class="logo"></div>
-        <nav></nav>
+        <nav>
+            <ul>
+                <li>01. History</li>
+                <li>02. Team</li>
+            </ul>
+        </nav>
     </header>
 
     <main id="main"></main>
