set header layout & styled nav

--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Los Angeles Mountains</title>
     <link rel="stylesheet" href="index.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div class="logo"></div>
+        <div class="logo">
+            <img src="/img/logo-img.png">
+        </div>
         <nav>
             <ul>
-                <li>01. History</li>
-                <li>02. Team</li>
+                <li>01. History </li>
+                <li>02. Team </li>
             </ul>
         </nav>
     </header>
