added event listeners to history & team nav items

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <nav>
             <ul>
-                <li>01. History </li>
-                <li>02. Team </li>
+                <li id="menu-01">01. History </li>
+                <li id="menu-02">02. Team </li>
             </ul>
         </nav>
     </header>
