rendering backgrounds for main page when logo is clicked

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">
+        <div id="logo" class="logo">
             <img src="/img/logo-img.png">
         </div>
         <nav>
