drafted renderHistoryPage() innerHTML & positioned .hx-content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         </nav>
     </header>
 
-    <main id="main"></main>
+    <main id="main">
+        <div id="content"></div>
+    </main>
 
     <footer>
         <img src="/img/footer-img.jpg">
